# OpenCLScheduler

./: .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  ClassDiagramScheduler.cd  LICENSE  battery_voltage.cpp  notes.txt  scheduler_global.h  voltage
.github/workflows/: ccpp.yml
data/POCL/ASAP/: MultiThreadded100k.csv  MultiThreadded100kOO.csv  SingleThreadded100k.csv  SingleThreadded100kOO.csv
data/POCL/RFS/: MultiThreadded100k.csv  MultiThreadded100kOO.csv  SingleThreadded100k.csv  SingleThreadded100kOO.csv
data/POCL/Serial/: MultiThreadded100k.csv  SingleThreadded100k.csv
data/POCL/Static/: MultiThreadded100k  SingleThreadded100k.csv
data/Results/: LocalPC-Load1000.xlsx  RunsRaspberryPi3B-Uni-POCL-Load10000.xlsx  RunsRaspberryPi3B-Uni-POCL-Load100k.xlsx  RunsRaspberryPi3B-Uni-VC4CL-Load10000.xlsx  RunsRaspberryPi3B-Uni-VC4CL-Load20000.xlsx
data/VC4CL/ASAP/: MultiThreadded20k.csv  MultiThreadded20kOO.csv  SingleThreadded20k.csv  SingleThreadded20kOO.csv
data/VC4CL/ReadyFire/: MultiThreadded20k.csv  SingleThreadded20k.csv
data/VC4CL/Serial/: MultiThreadded100k.csv  MultiThreadded20k.csv  Serial100k  SingleThreadded20k.csv
data/VC4CL/Static/: MultiThreadded20k.csv  SingleThreadded20k.csv
doc/: Doxyfile
kernels/: accel_sensor.cl  accident_kernel.cl  battery_kernel.cl  cruiseControl.cl  distanceTracker.cl  range_kernel.cl  speed_kernel.cl  temp_Range_kernel.cl  temp_kernel.cl  traction_kernel.cl  turn_radius_kernel.cl  wheel_spin_kernel.cl
pres/: presentation.synctex(busy)  presentation.tex
pres/res/: ASAPScheduling.uxf  DataRaspberryPI2B+.psd  Master.ods  RFScheduling.uxf  RaspberryPi2B_POCL_VS_VC4CL.xcf  SerialScheduling.uxf  StaticScheduling.uxf
scripts/: activate_vcan.sh  rebuild_debug.py
src/: InstanceManager.cpp  InstanceManager.h  accel_sensor.cpp  battery_voltage.cpp  device_querry.cpp  main.cpp  tempreture.cpp  wheel_sensors.cpp
src/CAN/: CanAccessor.cpp  CanAccessor.h  CanManager.cpp  CanManager.h  CanNamespace.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Sensor.cpp  Sensor.h  SimCar.cpp  SimCar.h  can_global.h
src/Scheduler/: ASAP.cpp  ASAP.h  Device.cpp  Device.h  DevicePropertys.cpp  DevicePropertys.h  KernelFileParser.cpp  KernelFileParser.h  NewStaticScheduler.cpp  NewStaticScheduler.h  ReadyFireScheduler.cpp  ReadyFireScheduler.h  ScheduleManager.cpp  ScheduleManager.h  Scheduler.cpp  Scheduler.h  SchedulerNamespace.h  StaticScheduler.cpp  StaticScheduler.h  Task.cpp  Task.h  scheduler_global.h
src/Sim/: SimCar.cpp  SimCar.h
src/UI/: ConstantDialog.cpp  ConstantDialog.h  ConstantDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenKernelFileWizard.cpp  OpenKernelFileWizard.h  OpenTaskWizard.ui  RandomNumberGenerator.cpp  RandomNumberGenerator.h  TUI.cpp  TUI.h  TaskTabWidget.cpp  TaskTabWidget.h  TaskTabWidget.ui  main.cpp
src/ValueGen/: Sensor.cpp  Sensor.h  SimCar.cpp  SimCar.h
uml/: UMLDiagramm.zargo  UMLDiagramm.zargo~
